[gd_scene load_steps=3 format=3 uid="uid://6fdm00l7f80l"]

[ext_resource type="Script" path="res://Scripts/plant1.gd" id="1_dmr8r"]
[ext_resource type="Texture2D" uid="uid://dq588avw66cbx" path="res://Arts/19.png" id="2_fr1ly"]

[node name="Plant1" type="Node2D"]
script = ExtResource("1_dmr8r")

[node name="Trunk" type="Sprite2D" parent="."]
position = Vector2(4, -7)
scale = Vector2(0.800781, 1.8125)
texture = ExtResource("2_fr1ly")

[node name="Node" type="Node2D" parent="."]

[node name="Timer1" type="Timer" parent="Node"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="Node"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="Node"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="Node/Timer1" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Node/Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Node/Timer3" to="." method="_on_timer_3_timeout"]
